[GREEN] Implement User model